--- a/example/public/index.html
+++ b/example/public/index.html
@@ -20,14 +20,14 @@
       content="Guitar Fretboard Diagram Generator. hosted by Guitar Tab Creator"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta property="og:title" content="Vex Fretboard by Guitar Tab Creator" />
+    <meta property="og:title" content="Guitar Fretboard Diagram Generator by Guitar Tab Creator" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://fretboard.guitartabcreator.com/" />
     <meta property="og:image" content="https://fretboard.guitartabcreator.com/ogimage.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1184" />
     <meta property="og:image:height" content="622" />
-    <meta property="og:description" content="Guitar Fretboard Diagram Generator" />
+    <meta property="og:description" content="Create Guitar Fretboard Diagrams that you can download and save. Hosted by Guitar Tab Creator." />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
